# cptserver

./: .gitignore  AUTHORS.md  CHANGELOG.md  Cargo.toml  CptServer.template.toml  Database.sql  README.md  Rocket.toml  WAIVER.md  WAIVER.sha256  cpt_test_env.sh  cptserver.service  cptserver.template.toml  release.sh  rustfmt.toml
sql/: migrate_2.sql  migrate_3.sql  migrate_4.sql  schema_0.sql  schema_1.sql  schema_2.sql  schema_3.sql  update_0.sql  update_1.sql
src/: api.rs  clock.rs  common.rs  config.rs  db.rs  db_club.rs  db_competence.rs  db_course.rs  db_event.rs  db_inventory.rs  db_location.rs  db_ranking.rs  db_skill.rs  db_slot.rs  db_team.rs  db_term.rs  db_user.rs  error.rs  lib.rs  main.rs  route_admin_courses.rs  route_admin_rankings.rs  route_admin_reservations.rs  route_admin_teams.rs  route_admin_users.rs  route_anon.rs  route_class_admin.rs  route_class_member.rs  route_class_moderator.rs  route_class_regular.rs  route_club_admin.rs  route_competence_admin.rs  route_contact.rs  route_course__admin.rs  route_course__mod.rs  route_course__user.rs  route_course_admin.rs  route_course_member.rs  route_course_mod.rs  route_course_moderator.rs  (+30 more)
src/common/: acceptance.rs  acceptance_status.rs  affiliation.rs  bank_account.rs  clock.rs  club.rs  confirmation.rs  confirmation_status.rs  course.rs  credential.rs  event.rs  fs.rs  gender.rs  item.rs  license.rs  location.rs  math.rs  mod.rs  occurrence.rs  organisation.rs  organization  skill.rs  slot.rs  team.rs  user.rs
src/db/: competence.rs  location.rs  login.rs  mod.rs  skill.rs  user.rs
src/db/club/: club.rs  mod.rs  statistics.rs  term.rs
src/db/course/: attendance.rs  leader.rs  mod.rs  moderator.rs  participant.rs  supporter.rs
src/db/event/: attendance.rs  leader.rs  mod.rs  moderator.rs  owner.rs  participant.rs  supporter.rs
src/db/inventory/: item.rs  itemcat.rs  mod.rs  possession.rs  stock.rs
src/db/organisation/: affiliation.rs  organisation.rs
src/db/team/: member.rs  mod.rs  team.rs
src/db/user/: bank_account.rs  (+3 more)
src/route/: anon.rs  login.rs  mod.rs
src/utils/: db.rs  event.rs  mod.rs
tests/: affiliation.rs  mod.rs
tests/common/: config.template  mod.rs
(+41 files in other folders)
