[package]
name = "cptserver"
version = "1.4.0"
authors = ["Moritz Oberhauser <moritz.oberhauser@gmail.com>"]
edition = "2021"

[lib]
name = "cptserver"
path = "src/lib.rs"

[dependencies]
mysql = "26.0"
mysql_common = {version = "0.34.1", features = ["chrono", "frunk"]}
chrono = { version = "^0.4.41", features = ["serde"]}
http = "1.3.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", features = ["chrono_0_4"] }
serde_json = "^1.0"
lazy_static = "1.4"
rand = "0.9.1"
regex = "1.6"
hex = "0.4.3"
sha2 = "0.10.9"
confy = "1.0.0"
thiserror = "2"
anyhow = "1.0.98"
